# bp_fastAPI-sqlalchemy-alembic-docker

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt  ruff.toml
.aws/: service-dev.json
.github/workflows/: deploy_dev.yml
app/: config.py  crud.py  main.py  utils.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: endpoints.py  health_check.py
app/db/: base.py  session.py
app/models/: example.py
app/schemas/: example.py
migrations/: README  env.py
tests/api/api_v1/endpoints/: test_health_check.py
