[project]
name = "bp-fastapi-sqlalchemy-alembic-docker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn==0.34.2",
    "pydantic==2.11.4",
    "sqlalchemy==2.0.41",
    "alembic==1.15.2",
    "psycopg2-binary==2.9.10",
    "python-dotenv==1.1.0",
    "pydantic-settings==2.3.4"
]

[project.optional-dependencies]
dev = [
    "pre-commit==4.2.0",
    "pytest==8.3.2",
    "pytest-cov==5.0.0",
    "pip-audit==2.7.3",
    "httpx==0.27.0"
]

[tool.ruff]
select = ["E", "F", "I"]
ignore = []
# Exclude migrations from pre-commit and general linting
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "migrations",
]
line-length = 80
fix = true

[tool.setuptools]
packages = ["app"]
